kubernetes/cray-rrs/templates/virtualService.yaml

#
# MIT License
#
# (C) Copyright 2021-2022, 2024 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zone-virtualservice
spec:
  hosts:
    - "*"  # Match all hosts
  gateways:
    - services/services-gateway
    - services/customer-admin-gateway
  http:
    - match:
        - uri:
            prefix: /zones

      route:
        - destination:
            host: rrs-api  # Route to the Service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /critical-pods
      route:
        - destination:
            host: rrs-api  # Route to the Service
            port:
              number: 8080
